# OTUS_CPP

./: CMakeLists.txt  Layer.cpp  Layer.h  Net.cpp  Net.h  main.cpp
